--- a/nachos-3.4/code/Makefile.common
+++ b/nachos-3.4/code/Makefile.common
@@ -76,7 +76,8 @@ USERPROG_H = ../userprog/addrspace.h\
 	../machine/machine.h\
 	../machine/mipssim.h\
 	../machine/translate.h\
-	../threads/synchcons.h
+	../threads/synchcons.h\
+	../threads/FileManage.h
 USERPROG_C = ../userprog/addrspace.cc\
 	../userprog/bitmap.cc\
 	../userprog/exception.cc\
@@ -85,9 +86,11 @@ USERPROG_C = ../userprog/addrspace.cc\
 	../machine/machine.cc\
 	../machine/mipssim.cc\
 	../machine/translate.cc\
-	../threads/synchcons.cc
+	../threads/synchcons.cc\
+	../threads/FileManage.cc
+
 USERPROG_O = addrspace.o bitmap.o exception.o progtest.o console.o machine.o \
-	mipssim.o translate.o synchcons.o
+	mipssim.o translate.o synchcons.o FileManage.o
 
 VM_H = 
 VM_C = 
